--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     <script>
         
     var page = 0;
-    var keyword;
+    var keyword = null;
     var src;
     // let datalength = result.data.length;
     //     console.log(datalength);
