--- a/templates/index.html
+++ b/templates/index.html
@@ -20,17 +20,17 @@
             <button class="item1">登入/註冊</button> 
         </span>
 	</div>
-        <div class="box">
-            <div class="text">輕鬆享受台北一日悠閒</div>
-            <div class="text1">探索每個角落，體驗城市的深度旅遊行程</div>
-            <input type="text" class="blank" placeholder="輸入景點名稱查詢" id="search_location"></input>
-            <button class="blank1" id="lookup"></button>
-            <img class="welcome" src="../static/welcome 1.png"></img>
-            <img class="welcome1" src="../static/icon_search.png"></img>
-        </div>
-    
-    <main id="content"> 
-         <div class="view"></div>
+    <div class="box">
+        <div class="text">輕鬆享受台北一日悠閒</div>
+        <div class="text1">探索每個角落，體驗城市的深度旅遊行程</div>
+        <input type="text" class="blank" placeholder="輸入景點名稱查詢" id="search_location"></input>
+        <button class="blank1" id="lookup"></button>
+        <img class="welcome" src="../static/welcome 1.png"></img>
+        <img class="welcome1" src="../static/icon_search.png"></img>
+    </div>
+
+    <main > 
+        <div class="view" id="content"></div>
     </main>
     <footer>
         <div class="footer"></div>
