--- a/static/attraction.css
+++ b/static/attraction.css
@@ -18,18 +18,66 @@
 .item1{
     font-size:16px;color: #666666;margin: 10px 0px;
 }
-
 .information{
     max-width: 1200px; margin: auto;
     display: flex; justify-content: space-around;
 }
-.img{
-    max-width: 540px; height: 406px;
+.showbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
+.container{
+    position: relative; width: 540px; height: 420px;
+    overflow: hidden;
+}
+/* .imgbox{
+    width: 100%; height: 100%;
+}
+.imgbox img{
+    width: 100%; height: 100%; margin: auto;
+} */
+/* .prev{
+    position: absolute; left: 10px; top: 200px;
+    background-color: white; border-radius: 15px;
+}
+.next{
+    position: absolute; left: 200px; top: 200px;
+    background-color: white; border-radius: 15px;
+} */
+.bottom{
+    position: absolute; bottom: 20px;
+    left: 50%;
+    display: flex; transform: translateX(-50%);
+}
+.bottom span{
+    width: 15px;height: 15px;
+    margin: 0px 3px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+/* .img{
+    max-width: 540px; width: 100%;
+    height: 406px; height: 100%;
+} */
+/* #container>.btn{
+    width: 50px; height: 50px;
+    border: none; border-radius: 25px;
+    position: absolute;
+    top: 185px; left: 10px;
+}
+#container>.btn1{
+    width: 50px; height: 50px;
+    border: none; border-radius: 25px;
+    position: relative;
+    float: right;
+    /* top: 185px; left: 10px; */
+/* }  */
 .schedule{
     max-width: 600px;width: 90%; height: 406px;
 }
-.locaiton_name{
+/* .locaiton_name{
     max-width: 600px; height: 33px;
     font-size:24px; line-height: 30px; color: #666666;
 }
@@ -50,21 +98,18 @@
 }
 .go{
     width: 154px;height: 36px;background-color: #448899;
-}
-.go1{
-    font-size: 19px; line-height: 16px; color: white;
-}
-.detail{
+    font-size:19px; line-height: 16px;color: white; 
+} */
+/* .hr{
+    max-width: 1200px; margin: 0px 30px;
+} */
+/* .detail{
     max-width: 1200px;
-}
+    margin: auto;
+} */
 .footer{
     background-color: #757575;
-    max-width: 1920px;height: 104px;
-    position:fixed;
+    max-width: 1920px;height: 104px; width: 100%;
+    font-size:20px;line-height:104px;color: #FFFFFF;
+    text-align: center; 
 }
-.footer-text{
-    position: absolute; left: 843px; top: 1315px;
-    font-size:16px;line-height:13.3px;color: #FFFFFF;
-    width: 240px;height: 14px;
-    position: fixed;
-} 
