--- a/static/index.css
+++ b/static/index.css
@@ -56,7 +56,7 @@ main{
 .view{
     display:flex;flex-wrap:wrap;
     justify-content:center;
-    max-width:1200px;height: 800px;
+    max-width:1200px;
     margin:auto;
     /* overflow: auto; */
 }
@@ -93,17 +93,11 @@ main{
     
 }
 .footer{
-    /* position: absolute; top: 1270px; */
     background-color: #757575;
-    max-width: 1920px;height: 104px;
-    position:fixed;
+    max-width: 1920px;height: 104px; width: 100%;
+    font-size:20px;line-height:104px;color: #FFFFFF;
+    text-align: center; align-items: center;
 }
-.footer-text{
-    position: absolute; left: 843px; top: 1315px;
-    font-size:16px;line-height:13.3px;color: #FFFFFF;
-    width: 240px;height: 14px;
-    position: fixed;
-} 
 
 @media(min-width:360px) and (max-width:500px){
     .top{
