--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -72,6 +72,36 @@
                 .hr{
                 max-width: 1200px; margin: 0px 30px;
                 }
+                @media(min-width:360px) and (max-width:500px){
+                    .information{
+                        max-width: 500px; margin: auto;
+                        display: block;
+                    }
+                    .showbox{
+                        align-items: center;
+                        justify-content: center;
+                        text-align: center;
+                    }
+                    .container{
+                        position: relative; width: 540px; height: 420px;
+                        overflow: hidden;
+                    }
+                    .hr{
+                        margin: 20px 30px;
+                    }
+                    .prev{
+                    position: absolute; left: 10px; top: 50%;
+                    width: 50px; height: 50px;
+                    font-size: 35px;
+                    background-color: white; border-radius: 50px;
+                    }
+                    .next{
+                    position: absolute; left: 85%; top: 50%;
+                    width: 50px; height: 50px;
+                    font-size: 35px;
+                    background-color: white; border-radius: 50px;
+                    }
+                }
             </style>
             <div class="information">
                 <div class = "showbox">
