--- a/static/index.css
+++ b/static/index.css
@@ -1,4 +1,16 @@
 
+body{
+    position: relative;
+    margin: 0px; text-align: center;
+}
+.gray{
+    width: 1920px; height: 2500px;
+    width: 100%; height: 100%;
+    z-index: 2;
+    background-color: black; opacity: 25%;
+    display: none;
+    position: absolute;
+}
 .top{
     max-width: 1200px;
     margin: auto;
@@ -8,6 +20,7 @@
 .head{
     /* position: absolute; left: 360px; top: 10px; */
     font-size:30px;line-height: 34px;color: #448899;font-weight: bold;
+    cursor: pointer;
 }
 .head1{
     /* position: absolute; left: 1300px; top: 20px; */
@@ -15,15 +28,92 @@
 }
 .item{
     font-size:16px;color: #666666;margin: 10px 0px;
+    background-color: white; border: white;
+    cursor: pointer;
 }
 .item1{
     font-size:16px;color: #666666;margin: 10px 0px;
+    background-color: white; border: white;
+    cursor: pointer;
+}
+.item2{
+    font-size:16px;color: #666666;margin: 10px 0px;
+    background-color: white; border: white;
+    cursor: pointer;
+    display: none;
+}
+.signinerror{
+    font-size: 10px; color: red;
+    display: none;
+}
+.signinbox{
+    width: 340px; height: 300px;
+    position: absolute; top: 80px;left: 50%;transform: translate(-170px, 0px);
+    z-index: 5;
+    border: 1px solid #888888;
+    background-color: #FFFFFF;
+    /* box-shadow: 0px 4px #AAAAAA; */
+    display: none;
+}
+.bluebar{
+    width: 340px; height: 10px;
+    /* background: linear-gradient(135deg, #AADDEE 0%, #66AABB 100%); */
+    background: linear-gradient(135deg, #337788 0%, #66AABB 100%);
+}
+.close{
+    position: absolute; top: 15px;right: 10px;
+    width: 20px;height: 20px; font-size: 20px;
+    padding: 0px;
+    color: #888888; background-color: white; border:black;
+    cursor: pointer;
+}
+.close1{
+    position: absolute; top: 15px;right: 10px;
+    width: 20px;height: 20px; font-size: 20px;
+    padding: 0px;
+    color: #888888; background-color: white; border:black;
+    cursor: pointer;
+}
+.account{
+    font-size: 24px; font-weight: bold; color: #666666;
+    margin: 15px;
+    text-align: center;
+    cursor: pointer;
+}
+.text2{
+    width: 300px; height: 47px; 
+    font-size: 16px;color: #666666;
+    margin: 5px 5px 5px 15px;
+    /* border: 1px #888888; */
+}
+.signinbtm{
+    width: 310px; height: 47px; color: white;
+    background-color: #448899;
+    margin: 5px 5px 5px 15px;
+    cursor: pointer;
+}
+.notamember{
+    width: 310px;height: 30px; 
+    font-size: 16px;color: #666666;
+    background-color: white;
+    border: 1px white;
+    margin: 5px 5px 5px 15px;
+    cursor: pointer;
+}
+.registerbox{
+    width: 340px; height: 360px;
+    position: absolute; top: 80px;left: 50%;transform: translate(-170px, 0px);
+    z-index: 5;
+    border: 1px solid #888888;
+    background-color: #FFFFFF;
+    /* box-shadow: 0px 4px #AAAAAA; */
+    display: none;
 }
 .box{
     max-width: 1920px;width: 100%;
     height:320px;
     background: linear-gradient(135deg, #AADDEE 0%, #66AABB 100%);
-    margin:0px;padding:0px;
+    margin:0px 0px 40px 0px;padding:0px;
 }
 .text{
     position: absolute; left: 370px; top: 85px;
@@ -46,6 +136,7 @@
 }
 .welcome1{
     position: absolute; left: 785px; top: 196px;
+    cursor: pointer;
 }
 main{
     display:flex;flex-wrap:wrap;
@@ -97,6 +188,7 @@ main{
     max-width: 1920px;height: 104px; width: 100%;
     font-size:20px;line-height:104px;color: #FFFFFF;
     text-align: center; align-items: center;
+    margin: 30px 0px;
 }
 
 @media(min-width:360px) and (max-width:500px){
